[package]
name = "map-api"
description = "Raft state machine"
version = "0.5.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
edition = "2021"

[features]

[dependencies]
async-trait = { version = "0.1.77" }
deepsize = { version = "0.2.0" }
futures = "0.3.24"
futures-async-stream = { version = "^0.2.7" }
futures-util = "0.3.24"
itertools = { version = "0.13.0" }
log = { version = "0.4.21", features = ["serde", "kv_unstable_std"] }
seq-marked = { version = "0.3.3"}
serde = { version = "1.0.164", features = ["derive", "rc"] }
stream-more = { version = "0.1.3" }
thiserror = { version = "1" }


[dev-dependencies]
anyhow = { version = "1.0.65" }
async-trait = { version = "0.1.77" }
pretty_assertions = { version = "1.3.0" }
serde_json = { version = "1.0.85" }
tempfile = { version = "3.4.0" }
tokio = { version = "1.35.0", features = ["full"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"


[patch.crates-io]
# seq-marked = { path = "../seq-marked" }

